# tasknexus-client-agent

./: .gitignore  Cargo.toml  LINUX_DEPLOYMENT.md  README.md  build.py  config.example.yaml  pyproject.toml  run_agent.py  tasknexus-agent.spec
.github/workflows/: build-release.yml
agent/: Cargo.toml  __init__.py  client.py  config.example.yaml  config.py  executor.py  git_manager.py  main.py
agent/src/: autostart.rs  client.rs  config.rs  executor.rs  lib.rs  main.rs  persisted_state.rs  self_update.rs  service.rs  service_linux.rs  service_macos.rs  service_windows.rs
components/collections/: agent.py  agent_block.py  agent_release.py  client_sandbox.py  workspace_acquire.py  workspace_release.py
src/: autostart.rs  config.rs  error.rs  executor.rs  lib.rs  main.rs
updater/: Cargo.toml
updater/src/: main.rs
