[package]
name = "tasknexus-agent"
version = "0.1.0"
edition = "2021"
description = "TaskNexus 客户端代理 - 连接到 TaskNexus 服务器执行远程任务"
license = "MIT"
authors = ["TaskNexus Team"]

[dependencies]
tokio = { version = "1", features = ["full", "process"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
thiserror = "1.0"
hostname = "0.4"
sysinfo = "0.30"
url = "2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
