[package]
name = "tasknexus-agent"
version = "0.2.5"
edition = "2021"
description = "TaskNexus 客户端代理 - 连接到 TaskNexus 服务器执行远程任务"
license = "MIT"
authors = ["TaskNexus Team"]

[dependencies]
tokio = { version = "1", features = ["full", "process"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
thiserror = "1.0"
hostname = "0.4"
sysinfo = "0.30"
url = "2"

chrono = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
sha2 = "0.10"
base64 = "0.22"
ed25519-dalek = { version = "2.1", default-features = false, features = ["std"] }

[target.'cfg(windows)'.dependencies]
windows-service = "0.8"
encoding_rs = "0.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
